<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LiveIcons</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="apply_button">Apply</string>
    <string name="title_activity_main">LiveIcons</string>
    <string name="msg_icon">Choose SMS icon animation</string>
    <string name="text_flip_sms">Flip SMS</string>
    <string name="text_breathing_sms">Breathing SMS</string>
    <string name="prev_sms_brthng">preview_sms_breathing</string>
    <string name="prev_wsp_pulse">preview_whatsapp_pulse</string>
    <string name="prev_hlo_pulse">preview_hello_pulse</string>
    <string name="prev_sms_flip">preview_sms_flip</string>
    <string name="text_whatsapp_pulse">Whatsapp Pulse</string>
    <string name="text_hello_pulse">Hello Pulse</string>

</resources>
